# me

./: .editorconfig  .gitignore  404.html  CNAME  Makefile  README.md  index.html  mkdocs.yaml  pyproject.toml  resume.html  sitemap.xml  software_engineer_resume.html
.github/workflows/: build.yml
assets/images/: ls.afdesign
docs/: index.md  resume.html  resume.txt  software_engineer_resume.html  software_engineer_resume.md  software_engineer_resume.txt
docs/assets/images/: cat-resume-ls-experience.afdesign  ls.afdesign
scripts/: create_resume_variations.py  install-puppeteer-ubuntu-dependencies.sh  md2pdf.py
search/: search_index.json
site/: 404.html  index.html  objects.inv  resume.html  resume.txt  sitemap.xml  software_engineer_resume.html  software_engineer_resume.txt
site/search/: search_index.json
site/software_engineer_resume/: index.html
software_engineer_resume/: index.html
templates/: default.html  default.pdf_options.json
