[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[project]
name = "me"
version = "0.0.0"
description = "david.belais.me"
readme = "README.md"
license = "MIT"
requires-python = "~=3.13"
authors = [
    { email = "david@belais.me" },
]

[project.urls]
Documentation = "https://david.belais.me"
Repository = "https://github.com/davebelais/me"

[tool.hatch.build.targets.wheel]
sources = [
    "src",
]
packages = [
    "src/me.py",
]

[tool.hatch.envs.default]
python = "3.13"
dependencies = [
    "gittable~=0.0",
    "dependence~=1.0",
    "mkdocs-material",
    "mkdocstrings[python]",
    "black",
    "pdfkit",
    "mypy",
    "jinja2",
    "types-Markdown",
]
pre-install-commands = [
    "pip install --upgrade pip setuptools",
]
post-install-commands = [
    "hatch run mypy --install-types --non-interactive || echo",
]

[tool.hatch.envs.hatch-static-analysis]
extra-dependencies = [
    "dependence~=1.0",
]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
ignore = [
    "F842",
    "INP001",
]
extend-select = [
    "E",
    "F",
    "UP",
    "B",
    "SIM",
    "I",
    "C",
    "N",
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 79

[tool.black]
line-length = 79
target-version = [
    "py313",
]

[tool.mypy]
python_version = "3.13"
files = [
    "src",
    "scripts",
]
mypy_path = "src"
disallow_untyped_defs = true
disallow_incomplete_defs = true
namespace_packages = true
explicit_package_bases = true
